<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoEuro</string>
    <string name="action_settings">Settings</string>
    <string name="home_activity">HomeActivity</string>
	<string name="text_source">Source</string>
    <string name="text_dest">Destination</string>
    <string name="text_date">Travel Date</string>
    <string name="btn_search">Search</string>
	<string name="pick_date">Pick Date</string>
    	
</resources>
